# CDSETool

./: .gitignore  Dockerfile  LICENSE  README.md  cdse.py  docker-compose.yml  downloader_main.py  main_s2.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: lint.yml  publish.yml  pylint.yml  pytest.yml  scan.yml
jylland_skybrud/: POLYGON.dbf  POLYGON.shp  POLYGON.shx
ribe_aoi/: ribe_aoi.dbf  ribe_aoi.qmd  ribe_aoi.shp  ribe_aoi.shx
src/cdsetool/: __init__.py  _attributes.py  _download_result.py  _processing.py  cli.py  credentials.py  download.py  exceptions.py  helper.py  logger.py  monitor.py  nodefilter.py  query.py
tests/: mock_auth.py  query_test.py
tests/credentials/: credentials_test.py
tests/credentials/mock/: openid-configuration.json
tests/download/: __init__.py  download_feature_test.py  download_result_test.py  download_test.py  test_download.py
tests/download/mock/: feature.json
tests/download/mock/sentinel_1/: manifest.safe
tests/download/mock/sentinel_2/: broken_manifest.safe  manifest.safe
tests/download/mock/sentinel_3/: manifest.xml  xfdumanifest.xml
tests/logger/: logger_test.py
tests/query/: query_features_test.py  query_test.py
tests/query/mock/sentinel_1/: README.md  attributes.json  describe.xml  odata_page_1.json  odata_page_2.json  odata_page_3.json  odata_page_4.json  odata_page_5.json  page_1.json  page_2.json  page_3.json  page_4.json  page_5.json  page_6.json
tests/shape/: POLYGON.dbf  POLYGON.shp  POLYGON.shx
