[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdsetool"
version = "0.2.12"
authors = [
  { name="Jacob Vejby", email="javej@sdfi.dk" },
]
description = "Tools & CLI for interacting with CDSE product APIs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer >= 0.9,< 1",
  "rich >= 13.6,< 14",
  "requests >= 2.28.1,< 3",
  "pyjwt[crypto] ~= 2.8.0",
  "geopandas >= 0.13.2",
]
[project.optional-dependencies]
test = [
    "black==24.4.2",
    "pylint==3.2.6",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "requests-mock==1.12.1",
    "pytest-mock==3.14.0",
]

[project.urls]
"Homepage" = "https://github.com/CDSETool/CDSETool"
"Bug Tracker" = "https://github.com/CDSETool/CDSETool/issues"

[project.scripts]
cdsetool = "cdsetool:cli.main"

[tool.pylint.design]
max-locals = 20

[tool.pylint.format]
max-line-length = "88"
disable="fixme"

[tool.pyright]
exclude = ["**/__pycache__", ".venv"]

# Can be strict too, see more fine-grained settings at:
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
typeCheckingMode = "standard"

executionEnvironments = [
  { root = "./" }
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
