[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdsetool"
version = "0.2.13"
authors = [
  { name="Jacob Vejby", email="javej@sdfi.dk" },
]
description = "Tools & CLI for interacting with CDSE product APIs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer >= 0.9,< 1",
  "rich >= 13.6,< 15",
  "requests >= 2.28.1,< 3",
  "pyjwt[crypto] >= 2.8,< 2.11",
  "geopandas >= 0.13.2",
]
[dependency-groups]
dev = [
    "ruff==0.13.3",
]
# (Jan 30 2025) Pip does not support dependency-groups yet, so
# leave the optional dependencies for everything except Ruff.
[project.optional-dependencies]
test = [
    "pylint==3.3.8",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "requests-mock==1.12.1",
    "pytest-mock==3.15.1",
]

[project.urls]
"Homepage" = "https://github.com/CDSETool/CDSETool"
"Bug Tracker" = "https://github.com/CDSETool/CDSETool/issues"

[project.scripts]
cdsetool = "cdsetool:cli.main"

[tool.pylint.design]
max-locals = 20

[tool.pylint.format]
max-line-length = "88"
disable="fixme"

[tool.pylint.imports]
disable="wrong-import-order"

[tool.pyright]
exclude = ["**/__pycache__", ".venv"]

# Can be strict too, see more fine-grained settings at:
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
# reportMissingParameterType = true
typeCheckingMode = "standard"

executionEnvironments = [
  { root = "./" }
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "I", # isort
]
